# cobot1

./: .gitignore
.understand-anything/: .understandignore  fingerprints.json  knowledge-graph.json  (+1 more)
common/ros2_move_recoder/: .gitignore  LICENSE  README.md  package.xml  setup.cfg  setup.py
common/ros2_move_recoder/dev-docs/: CHANGELOG.md  README.md  architecture.md  build-and-run.md  data-formats.md  dev-essentials.md  dualsense-mapping.md  dualsense-plan.md  extending.md  gripper.md  gui.md  pipeline.md  presentation-plan.md  troubleshooting.md  voice-vision-async-workflow.md
common/ros2_move_recoder/dev-docs/ppt/: index.html
common/ros2_move_recoder/dev-docs/ppt/assets/themes/: dark-corporate.css
common/ros2_move_recoder/ros2_move_recoder/: dualsense_worker.py  gripper_worker.py  gui.py  playback.py  player.py  recorder.py  run.py  smoother.py
common/ros2_move_recoder/test/: test_playback.py
main_side/robo_chef/: README.md  package.xml  setup.py
main_side/robo_chef/core/: action_manager.py
main_side/robo_chef/core/actions/: close_cap.py  open_cap.py  pick.py  place.py  pour.py  push.py  shake.py  stir.py
main_side/robo_chef/data/: full_steak.json  ramen.json  steak.json
main_side/robo_chef/nodes/: cooking_core.py  firebase_bridge.py  order_core.py  recipe_tester.py  sequence_runner.py
main_side/robo_chef/src/interfaces/recipe_msgs/: CMakeLists.txt  package.xml
main_side/robo_chef/src/interfaces/recipe_msgs/action/: Recipe.action
main_side/robo_chef/src/robo_chef/: setup.cfg
main_side/robo_chef/src/robo_chef/core/: base_action.py
main_side/robo_chef/src/robo_chef/core/actions/: approach.py  flip.py  press.py  spread.py  sqeeze.py
main_side/robo_chef/src/robo_chef/data/: test.json  test_2.json  test_pose_at_safezone.json
main_side/robo_chef/src/robo_chef/nodes/: executer.py  recipe_parser.py  state_manager.py
main_side/robo_chef/src/robo_chef/test/: RoboChef.py
main_side/robo_chef/test/: test_cooking_core.py  test_order_core.py
(+39 files in other folders)
