<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robo_chef</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="neopkrrl@gmail.com">kibeom</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>ros2_move_recoder</exec_depend>
  <exec_depend>dsr_common2</exec_depend>
  <exec_depend>dsr_msgs2</exec_depend>
  <!-- firebase-admin 은 rosdep 키가 없어 pip 로 처리: pip3 install firebase-admin -->
  <!-- setup.py install_requires 에도 명시되어 colcon 빌드 시 함께 설치됨. -->


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
